--- a/templates/form.html
+++ b/templates/form.html
@@ -14,16 +14,12 @@
       <form action = "{{ request.path }}" method = "post">
          <label for = "name">Name</label><br>
          <input type = "text" name = "name" placeholder = "Name" /><br>
-         <label for = "email">City</label><br>
-         <input type = "text" name = "city" placeholder = "city" /><br>
-         <label for = "addr">addr</label><br>
-         <textarea name = "addr" placeholder = "addr"></textarea><br>
-         <label for = "PIN">City</label><br>
-         <input type = "text" name = "pin" placeholder = "pin" /><br>
-         <!-- <label for = "Add">Add</label><br>
+         <label for = "quantity">Quantity</label><br>
+         <input type = "text" name = "quantity" placeholder = "quantity" /><br>
+         <label for = "Add">Add</label><br>
          <input type = "radio" name = "add" placeholder = "Add" /><br>
          <label for = "Remove">Remove</label><br>
-         <input type = "radio" name = "remove" placeholder = "Remove" /><br> -->
+         <input type = "radio" name = "remove" placeholder = "Remove" /><br>
          <input type = "submit" value = "Submit" />
       </form>
       
