--- a/templates/show_all.html
+++ b/templates/show_all.html
@@ -8,26 +8,22 @@
          {{ message }}
       {%- endfor %}
 		
-      <h3>Students (<a href = "{{ url_for('new') }}">Add Student
+      <h3>Shopping List (<a href = "{{ url_for('form') }}">Add/Remove Item
          </a>)</h3>
       
       <table>
          <thead>
             <tr>
                <th>Name</th>
-               <th>City</th>
-               <th>Address</th>
-               <th>Pin</th>
+               <th>Quantity</th>
             </tr>
          </thead>
          
          <tbody>
-            {% for student in students %}
+            {% for item in list %}
                <tr>
-                  <td>{{ student.name }}</td>
-                  <td>{{ student.city }}</td>
-                  <td>{{ student.addr }}</td>
-                  <td>{{ student.pin }}</td>
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.quantity }}</td>
                </tr>
             {% endfor %}
          </tbody>
