--- a/templates/new.html
+++ b/templates/new.html
@@ -2,7 +2,7 @@
 <html>
    <body>
    
-      <h3>Students</h3>
+      <h3>Shopping List</h3>
       <hr/>
       
       {%- for category, message in get_flashed_messages(with_categories = true) %}
@@ -14,12 +14,8 @@
       <form action = "{{ request.path }}" method = "post">
          <label for = "name">Name</label><br>
          <input type = "text" name = "name" placeholder = "Name" /><br>
-         <label for = "quantity">Quantity</label><br>
-         <input type = "text" name = "quantity" placeholder = "quantity" /><br>
-         <label for = "Add">Add</label><br>
-         <input type = "radio" name = "add" placeholder = "Add" /><br>
-         <label for = "Remove">Remove</label><br>
-         <input type = "radio" name = "remove" placeholder = "Remove" /><br>
+         <label for = "email">Quantity</label><br>
+         <input type = "text" name = "quantity" placeholder = "Quantity" /><br>
          <input type = "submit" value = "Submit" />
       </form>
       
