--- a/templates/remove.html
+++ b/templates/remove.html
@@ -9,7 +9,7 @@
          <label for = "name">Name</label><br>
          <input type = "text" name = "name" placeholder = "Name" /><br>
          <label for = "email">Quantity</label><br>
-         <input type = "text" name = "quantity" placeholder = "Quantity" /><br>
+         <input type = "number" name = "quantity" placeholder = "Quantity" /><br>
          <input type = "submit" value = "Submit" />
       </form>
       
